feat: tried fixing json save to file, not working when mvn javafx:run